--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,40 @@
-version: '3.5'
+version: '3.3'
 
 services:
-    nginx:
+    nginx_base:
         build:
             args:
-                CBF_VERSION: ${CBF_VERSION:-dev}
-                CONTAINER_NAME: nginx
-                CONTAINER_VERSION: 1.0.8
-                FROM_BASE: supervisord:${CONTAINER_TAG:-latest}
+                CBF_VERSION: "${CBF_VERSION:-}"
+                CONTAINER_NAME: nginx_base
+                FROM_BASE: ${DOCKER_REGISTRY:-}supervisord:${CONTAINER_TAG:-latest}
             cache_from:
-                - alpine:3.6
-                - base_container:${CONTAINER_TAG:-latest}
-                - supervisord:${CONTAINER_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}alpine:3.8
+                - ${DOCKER_REGISTRY:-}base_container:${CONTAINER_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}supervisord:${CONTAINER_TAG:-latest}
             context: .
             dockerfile: Dockerfile
-        container_name: nginx
+        container_name: nginx_base
         environment:
             DEBUG_TRACE: ${DEBUG_TRACE:-0}
-        hostname: nginx
-        image: nginx:${CONTAINER_TAG:-latest}
+            SUPERVISORD_PASS: $CFG_PASS
+            SUPERVISORD_USER: $CFG_USER
+        hostname: nginx_base
+        image: ${DOCKER_REGISTRY:-}nginx_base:${CONTAINER_TAG:-latest}
+        labels:
+            container.fingerprint: $CONTAINER_FINGERPRINT
+            container.git.branch: $CONTAINER_GIT_BRANCH
+            container.git.commit: $CONTAINER_GIT_COMMIT
+            container.git.url: $CONTAINER_GIT_URL
+            container.origin: $CONTAINER_ORIGIN
+            container.original.name: nginx_base
+            container.version: ${CONTAINER_VERSION:-3.0.0}
         logging:
             driver: json-file
             options:
                 max-file: "3"
                 max-size: "10m"
+        ports:
+           - 80:80
+           - 9001:9001
 # only use when building a 'service container'
 #        restart: unless-stopped
