--- a/.dockerignore
+++ b/.dockerignore
@@ -3,9 +3,17 @@
 .gitattributes
 .gitignore
 .lfsconfig
+.cbfBlacklist
+.cbfProject
 
 #build files
-docker-compose.yml
+docker-compose.*
+bin/*
+vols*/*
+**/CRF.properties
+**/CBF.properties
+**/scanned.paths
+**/*.loaded
 
 # Information files
 LICENSE
